--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.6",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
+    "lottie-react": "^2.2.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
