--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-twin": "^1.0.2",
-    "graphql": "^16.3.0",
+    "graphql": "^16.4.0",
     "graphql-request": "^4.2.0",
     "lottie-react": "^2.2.1",
+    "nanoid": "^3.3.3",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
