--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-twin": "^1.0.2",
+    "fetch-cookie": "^2.0.3",
     "graphql": "^16.4.0",
     "graphql-request": "^4.2.0",
     "lottie-react": "^2.2.1",
