--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@hookform/error-message": "^2.0.0",
     "@types/react": "^18.0.6",
     "axios": "^0.27.2",
-    "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-styled-components": "^2.0.7",
-    "babel-plugin-twin": "^1.0.2",
     "contentful": "^9.1.32",
     "fetch-cookie": "^2.0.3",
     "graphql": "^16.4.0",
@@ -27,9 +24,7 @@
     "react-dom": "18.0.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.30.0",
-    "react-icons": "^4.3.1",
-    "styled-components": "^5.3.5",
-    "twin.macro": "^2.8.2"
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
