--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "18.0.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.30.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "zustand": "^4.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
