--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "nanoid": "^3.3.3",
     "next": "12.1.5",
     "nodemailer": "^6.7.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
