--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
     "@hookform/error-message": "^2.0.0",
     "@types/react": "^18.0.6",
     "axios": "^0.27.2",
