--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "graphql-request": "^4.2.0",
     "lottie-react": "^2.2.1",
     "nanoid": "^3.3.3",
-    "next": "12.1.5",
+    "next": "^13.5.6",
     "nodemailer": "^6.7.5",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.30.0",
     "react-icons": "^4.3.1",
